# meta-reactive

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md
examples/basic/: classic.py  client.py  meta.py
examples/detector/: detector_demo.py
examples/hackernews/: classic.py
examples/meta_api/: hackernews.py
examples/temp_monitor/: classic.py  client.py  common.py  meta.py
examples/utils/: colored_logger.py
src/reactive/classic/: resource.py  service.py
src/reactive/core/: compute_graph.py
src/reactive/meta/: common.py  detector.py  mapper.py
src/reactive_framework/classic/: collection.py  mapper.py  resource.py  service.py
src/reactive_framework/core/: collection.py  compute_graph.py  resource.py  types.py
src/reactive_framework/meta/: __init__.py  analysis.py  collection.py  common.py  decorators.py  detector.py  mapper.py  resource.py  service.py
