[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reactive"
version = "0.1.0"
description = "A reactive framework with classic and metaprogramming APIs"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==25.1.0",
    "black==25.1.0",
    "blinker==1.9.0",
    "click==8.1.8",
    "fastapi==0.115.8",
    "Flask==3.1.0",
    "frozenlist==1.5.0",
    "gevent==24.11.1",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "Hypercorn==0.17.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "libcst==1.6.0",
    "MarkupSafe==3.0.2",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "priority==2.0.0",
    "propcache==0.2.1",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "PyYAML==6.0.2",
    "Quart==0.20.0",
    "setuptools==75.8.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.38",
    "sse-starlette==2.2.1",
    "starlette==0.45.3",
    "termcolor==2.5.0",
    "typing_extensions==4.12.2",
    "uvicorn==0.34.0",
    "Werkzeug==3.1.3",
    "wsproto==1.2.0",
    "yarl==1.18.3",
    "zope.event==5.0",
    "zope.interface==7.2",
]
